# Joyflix-CloudGaming

./: .gitmodules  CMakeLists.txt  README.md
ClientApp/: App.js  package.json
ClientApp/public/css/: main.css
ClientApp/public/js/: config.js  videoplayer.js
ClientApp/public/src/: logger.js  peer.js  signaling.js
ClientApp/public/videoplayer/: index.html
ClientApp/public/videoplayer/js/: gamepadEvents.js  register-events.js  video-player.js
cmake/: FindXCB.cmake
src/: CMakeLists.txt  Signalling_Handler.cpp  Signalling_Handler.h  VulkanApp.h  WebRTC_Handler.cpp  WebRTC_Handler.h  main.cpp  pch.h
src/Cuda/: CMakeLists.txt  CudaApp.cpp  CudaContext.cpp  CudaContext.h
src/Obs-Studio/: CMakeLists.txt  OBS.cpp  OBS.h
src/Signalling/: CMakeLists.txt  Server.cpp  Server.h  Signalling.cpp  Signalling.h
src/Vulkan/: CMakeLists.txt  CommandLineParser.hpp  VulkanBase.cpp  VulkanBase.h  VulkanDevice.cpp  VulkanSwapChain.cpp  VulkanSwapChain.h
src/Webrtc/: API.cpp  API.h  CMakeLists.txt  COMMIT  CSDO.cpp  CSDO.h  Context.cpp  Context.h  CreateSessionDescriptionObserverX.cpp  CreateSessionDescriptionObserverX.h  DataChannelObject.cpp  DataChannelObject.h  Logger.cpp  Logger.h  MSO.cpp  MSO.h  MediaStreamObserverX.cpp  MediaStreamObserverX.h  PeerConnectionObject.cpp  PeerConnectionObject.h  PeerConnectionStatsCollectorCallback.cpp  PeerConnectionStatsCollectorCallback.h  SSDO.cpp  SSDO.h  SetLocalDescriptionObserver.cpp  SetLocalDescriptionObserver.h  SetRemoteDescriptionObserver.cpp  SetRemoteDescriptionObserver.h  Size.h  Types.h  VideoFrame.cpp  VideoFrameX.h  VideoTrackSource.cpp  VideoTrackSource.h  WebRTCPlugin.cpp  WebRTCPlugin.h  _API.h  pch.h
src/Webrtc/examples/: CMakeLists.txt
